--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "node-sass": "^5.0.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-flip-toolkit": "^7.0.13",
     "react-scripts": "4.0.2",
     "web-vitals": "^1.0.1"
   },
